// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityRow renders with new posts 1`] = `
<li>
  <Link
    data-styleName="s.communityRow"
    replace={false}
    title="Barmunity"
    to="/c/bar"
  >
    <div
      data-styleName="s.avatar"
      style={
        Object {
          "backgroundImage": "url(/bar.png)",
        }
      }
    />
    <span
      data-styleName="s.community-name s.highlight"
    >
      Barmunity
    </span>
    <Badge
      number={7}
    />
  </Link>
</li>
`;

exports[`CommunityRow renders with zero new posts 1`] = `
<li>
  <Link
    data-styleName="s.communityRow"
    replace={false}
    title="Foomunity"
    to="/c/foo"
  >
    <div
      data-styleName="s.avatar"
      style={
        Object {
          "backgroundImage": "url(/foo.png)",
        }
      }
    />
    <span
      data-styleName="s.community-name"
    >
      Foomunity
    </span>
  </Link>
</li>
`;

exports[`Drawer renders a community list if networks are present 1`] = `
<div
  data-styleName="s.communityDrawer"
>
  <Icon
    data-styleName="s.closeDrawer"
    name="Ex"
  />
  <Logo />
  <ul
    data-styleName="s.networkList"
  >
    <li
      data-styleName="s.sectionTitle"
    >
      Networks
    </li>
    <NetworkRow
      network={
        Object {
          "avatarUrl": "/wombat.png",
          "id": "1",
          "memberships": Array [
            Object {
              "community": Object {
                "avatarUrl": "/foo.png",
                "id": "11",
                "name": "Foomunity",
                "slug": "foo",
              },
              "id": "1",
              "newPostCount": 0,
            },
            Object {
              "community": Object {
                "avatarUrl": "/bar.png",
                "id": "22",
                "name": "Barmunity",
                "slug": "bar",
              },
              "id": "2",
              "newPostCount": 7,
            },
          ],
          "name": "Wombat Network",
        }
      }
    />
  </ul>
  <ul
    data-styleName="s.communitiesList"
  >
    <li
      data-styleName="s.sectionTitle"
    >
      All Communities
    </li>
    <CommunityRow
      membership={
        Object {
          "community": Object {
            "avatarUrl": "/foo.png",
            "id": "11",
            "name": "Foomunity",
            "slug": "foo",
          },
          "id": "1",
          "newPostCount": 0,
        }
      }
    />
    <CommunityRow
      membership={
        Object {
          "community": Object {
            "avatarUrl": "/bar.png",
            "id": "22",
            "name": "Barmunity",
            "slug": "bar",
          },
          "id": "2",
          "newPostCount": 7,
        }
      }
    />
  </ul>
  <Button
    color="white"
    data-styleName="s.newCommunity"
    label="Create a Network or Community"
  />
</div>
`;

exports[`Drawer renders with a current community 1`] = `
<div
  data-styleName="s.communityDrawer"
>
  <Icon
    data-styleName="s.closeDrawer"
    name="Ex"
  />
  <Logo
    community={
      Object {
        "avatarUrl": "/foo.png",
        "id": "11",
        "name": "Foomunity",
        "slug": "foo",
      }
    }
  />
  <ul
    data-styleName="s.communitiesList"
  >
    <li
      data-styleName="s.sectionTitle"
    >
      All Communities
    </li>
    <CommunityRow
      membership={
        Object {
          "community": Object {
            "avatarUrl": "/foo.png",
            "id": "11",
            "name": "Foomunity",
            "slug": "foo",
          },
          "id": "1",
          "newPostCount": 0,
        }
      }
    />
    <CommunityRow
      membership={
        Object {
          "community": Object {
            "avatarUrl": "/bar.png",
            "id": "22",
            "name": "Barmunity",
            "slug": "bar",
          },
          "id": "2",
          "newPostCount": 7,
        }
      }
    />
  </ul>
  <Button
    color="white"
    data-styleName="s.newCommunity"
    label="Create a Network or Community"
  />
</div>
`;

exports[`Drawer renders without a current community 1`] = `
<div
  data-styleName="s.communityDrawer"
>
  <Icon
    data-styleName="s.closeDrawer"
    name="Ex"
  />
  <Logo />
  <ul
    data-styleName="s.communitiesList"
  >
    <li
      data-styleName="s.sectionTitle"
    >
      All Communities
    </li>
    <CommunityRow
      membership={
        Object {
          "community": Object {
            "avatarUrl": "/foo.png",
            "id": "11",
            "name": "Foomunity",
            "slug": "foo",
          },
          "id": "1",
          "newPostCount": 0,
        }
      }
    />
    <CommunityRow
      membership={
        Object {
          "community": Object {
            "avatarUrl": "/bar.png",
            "id": "22",
            "name": "Barmunity",
            "slug": "bar",
          },
          "id": "2",
          "newPostCount": 7,
        }
      }
    />
  </ul>
  <Button
    color="white"
    data-styleName="s.newCommunity"
    label="Create a Network or Community"
  />
</div>
`;
